--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,6 +22,7 @@ $lightblue: #c4f9ff;
 $darkred: #dd1e00;
 $lightred: #ffc1b7;
 $green: #54aa08;
+$linkindropdown: #000;
 $lightgold: #eddec6;
 $gold: #d4ae75;
 
