--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -120,7 +120,7 @@
   {{ 'Members'|trans }}: {{ teamsStats.totusers }} − {% trans %}Experiment{% plural teamStats.totxp %}Experiments{% endtrans %}: {{ teamsStats.totxp }} ({{ teamsStats.totxpts }} timestamped) − {{ 'Items'|trans }}: {{ teamsStats.totdb }}
   </div>
 
-  <h3 class='p-2 pl-3 section-title'><i class='fas fa-users'></i> {{ 'Members'|trans }}</h3>
+  <h3 class='p-2 pl-3 mb-3 section-title'><i class='fas fa-users'></i> {{ 'Members'|trans }}</h3>
   <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
     <thead>
       <tr>
