--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -1,123 +1,115 @@
 {# dim the experiment a bit if it's not yours #}
 {% set randomId = random() %}
 {% set owner = '' %}
-{% set bgcolor = 'fff' %}
 {% if (Entity.Users.userData.userid != item.userid) and not App.Session.has('is_anon') %}
-  {% set bgcolor = 'f4f6f7' %}
   {% set owner = "%s <a href='?owner=%s'>%s</a>"|trans|format('by', item.userid, item.fullname) %}
 {% endif %}
-{% if Entity.Users.userData.single_column_layout %}
-  <div class='col-xs-12 col-sm-12 col-md-12 col-lg-12'>
-{% else %}
-  <div class='col-xs-12 col-sm-6 col-md-6 col-lg-4'>
-{% endif %}
 
-<section class='item pl-3 d-flex' id='parent_{{ randomId }}' style='--bg-color: #{{ bgcolor }}; --left-color: #{{ item.color }};'>
+<section class='item pl-3 d-flex' id='parent_{{ randomId }}' style='--left-color: #{{ item.color }};'>
 
-    {# left part, full height: checkbox #}
-    <div class='d-flex align-items-center'>
-      {# checkbox #}
-      <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' class='mr-3' />
-      <div class='d-flex'>
+  {# left part, full height: checkbox #}
+  <div class='d-flex align-items-center'>
+    {# checkbox #}
+    <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' class='mr-3' />
+    <div class='d-flex'>
 
-        {# lock icon #}
-        {% if item.locked %}
-          <div class='left-icon rounded mr-3 my-1 bgnd-gray'>
-            <i class='fas fa-lock fa-fw'></i>
-          </div>
+      {# lock icon #}
+      {% if item.locked %}
+        <div class='left-icon rounded mr-3 my-1 bgnd-gray'>
+          <i class='fas fa-lock fa-fw'></i>
+        </div>
+      {% else %}
+        {# edit icon #}
+        {% if (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
+          <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'>
+            <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
+              <i class='fas fa-pencil fa-fw'></i>
+            </div>
+          </a>
         {% else %}
-          {# edit icon #}
-          {% if (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
-            <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'>
-              <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
-                <i class='fas fa-pencil fa-fw'></i>
-              </div>
-            </a>
-          {% else %}
-          {# eye icon #}
-            <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}' title='{{ 'View'|trans }}'>
-              <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
-                <i class='fas fa-eye fa-fw'></i>
-              </div>
-            </a>
-          {% endif %}
+        {# eye icon #}
+          <a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}' title='{{ 'View'|trans }}'>
+            <div class='left-icon rounded mr-3 my-1 bgnd-dark'>
+              <i class='fas fa-eye fa-fw'></i>
+            </div>
+          </a>
         {% endif %}
-      </div>
-    </div>
-
-    {# middle part: category, title, icons and tags #}
-    <div>
-      {# first line #}
-      <div>
-        {# timestamp icon #}
-        {% if item.timestamped %}
-          <i style='color:#{{ item.color }}' class='far fa-calendar-check fa-fw'></i>
-        {% endif %}
-        {# category #}
-        <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
-      </div>
-      {# end first line #}
-
-      {# second line: title #}
-      <div class='d-flex justify-content-between title'>
-        <p><a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a></p>
-      </div>
-      {# owner #}
-      <div class='owner'>
-        {{ owner|raw }}
-      </div>
-
-      {# end second line #}
-
-      {% if item.next_step|length > 0 %}
-        {% set stepsArr = item.next_step|split('|') %}
-        {% set next = stepsArr|first %}
-        <p class='item-next my-2'>
-        <span class='next-step-text'>{{ 'Next step'|trans }}:</span> <span class='item-next-step'>{{ next|raw }}</span>
-        </p>
       {% endif %}
+    </div>
+  </div>
 
-      <p class='my-1'>
-        {% set itemtagsArr = tagsArr[item.id] %}
-        {% if itemtagsArr|length > 0 %}
-          <span class='d-inline-flex flex-wrap'><i class='fas fa-tags mr-1 fa-fw'></i>
-            {% for tag in itemtagsArr %}
-              <a class='tag mathjax-ignore margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
-            {% endfor %}
-          </span>
-        {% endif %}
-      </p>
+  {# middle part: category, title, icons and tags #}
+  <div>
+    {# first line #}
+    <div>
+      {# timestamp icon #}
+      {% if item.timestamped %}
+        <i style='color:#{{ item.color }}' class='far fa-calendar-check fa-fw'></i>
+      {% endif %}
+      {# category #}
+      <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
+    </div>
+    {# end first line #}
 
-      {# container to hold the body of the entity if it is toggled with the +/- icon #}
-      {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
-      <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+    {# second line: title #}
+    <div class='d-flex justify-content-between title'>
+      <p><a href='{{ Entity.page }}.php?mode=view&id={{ item.id }}'>{{ item.title|raw }}</a></p>
+    </div>
+    {# owner #}
+    <div class='owner'>
+      {{ owner|raw }}
     </div>
 
-    {# third part: end container #}
-    <div class='d-flex justify-content-end ml-auto'>
-      {# column for date and icons #}
-      <div class='d-flex flex-column ml-auto'>
-        {# rating, date and pinned icon #}
-        <div>
-          {# rating #}
-          {% if item.rating > 0 %}
-            <span class='rating-show rounded px-1 mr-1 font-weight-bold'><i class='fas fa-star mr-1' title='☻'></i>{{ item.rating }}</span>
-          {% endif %}
-          <span class='item-date'>{{ item.date|date('Y-m-d') }}</span>
-          {% if isPinned %}
-            <a class='elab-tooltip ml-2' data-action='toggle-pin' data-id='{{ item.id }}' href='#'>
-              <span>{{ 'Toggle pin'|trans }}</span>
-              <i class='fas fa-thumbtack fa-fw'title="{{ 'Pinned'|trans }}"></i>
-            </a>
-          {% endif %}
-        </div>
-        <div class='ml-auto'>
-          {# toggle body #}
-          <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
-            <i class='fas fa-square-plus fa-fw'></i>
-          </span>
-        </div>
+    {# end second line #}
+
+    {% if item.next_step|length > 0 %}
+      {% set stepsArr = item.next_step|split('|') %}
+      {% set next = stepsArr|first %}
+      <p class='item-next my-2'>
+      <span class='next-step-text'>{{ 'Next step'|trans }}:</span> <span class='item-next-step'>{{ next|raw }}</span>
+      </p>
+    {% endif %}
+
+    <p class='my-1'>
+      {% set itemtagsArr = tagsArr[item.id] %}
+      {% if itemtagsArr|length > 0 %}
+        <span class='d-inline-flex flex-wrap'><i class='fas fa-tags mr-1 fa-fw'></i>
+          {% for tag in itemtagsArr %}
+            <a class='tag mathjax-ignore margin-1px' href='{{ Entity.page }}.php?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+          {% endfor %}
+        </span>
+      {% endif %}
+    </p>
+
+    {# container to hold the body of the entity if it is toggled with the +/- icon #}
+    {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
+    <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
+  </div>
+
+  {# third part: end container #}
+  <div class='d-flex justify-content-end ml-auto'>
+    {# column for date and icons #}
+    <div class='d-flex flex-column ml-auto'>
+      {# rating, date and pinned icon #}
+      <div>
+        {# rating #}
+        {% if item.rating > 0 %}
+          <span class='rating-show rounded px-1 mr-1 font-weight-bold'><i class='fas fa-star mr-1' title='☻'></i>{{ item.rating }}</span>
+        {% endif %}
+        <span class='item-date'>{{ item.date|date('Y-m-d') }}</span>
+        {% if isPinned %}
+          <a class='elab-tooltip ml-2' data-action='toggle-pin' data-id='{{ item.id }}' href='#'>
+            <span>{{ 'Toggle pin'|trans }}</span>
+            <i class='fas fa-thumbtack fa-fw'title="{{ 'Pinned'|trans }}"></i>
+          </a>
+        {% endif %}
+      </div>
+      <div class='ml-auto'>
+        {# toggle body #}
+        <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
+          <i class='fas fa-square-plus fa-fw'></i>
+        </span>
       </div>
     </div>
-  </section>
-</div>
+  </div>
+</section>
